src/test/fail/inheritance/inherit_self.lly
#[
SyntaxError: A class cannot inherit from itself!
Where: File "inherit_self.lly" at line 6
]#

class abc() < abc {  }
